@startuml
!theme black-knight
package "Interfaces" {
    interface IStructuredType {
        +StructureType StructureType()
    }
    
    interface IChainable {
        +BaseInStructure* PNext { get; set; }
    }
    
    interface IExtendsChain<TChain> {
    }
    
    interface IChainStart {
    }
    
    IStructuredType <|-- IChainable
    
    IChainable <|-- IExtendsChain
    IChainable <|-- IChainStart
}

package "Structures" {
    class BaseInStructure implements IChainable {
        +StructureType SType
        +BaseInStructure* PNext
        
        +BaseInStructure* IChainable.PNext { get; set; }
        
        +StructureType IStructureType.StructureType()
    }
    
    class PhysicalDeviceFeatures2 implements IChainStart {
        +StructureType SType
        +BaseInStructure* PNext
        +PhysicalDeviceFeatures Features
        
        +BaseInStructure* IChainable.PNext { get; set; }
        
        +StructureType IStructureType.StructureType()
    }
    
    IExtendsChain <|..  PhysicalDeviceFeatures2
    
    class PhysicalDeviceVariablePointersFeatures implements IExtendsChain {
        +StructureType SType
        +BaseInStructure* PNext
        +Bool32 VariablePointersStorageBuffer
        +Bool32 VariablePointers
        
        +BaseInStructure* IChainable.PNext { get; set; }
        
        +StructureType IStructureType.StructureType()
    }
    
    IExtendsChain <|.. PhysicalDeviceVariablePointersFeatures
    IExtendsChain <|.. PhysicalDeviceVariablePointersFeatures
    IExtendsChain <|.. PhysicalDeviceVariablePointersFeatures
}
@enduml